Add events route
